<resources>
    <string name="app_name">My Nanodegree Projects</string>
    <string name="action_settings">Settings</string>
    <string name="app_header">My Nanodegree Apps</string>
    <string name="button_spotify_streamer_text">Spotify Streamer</string>
    <string name="button_scores_app_text">Score App</string>
    <string name="button_library_app_text">Library App</string>
    <string name="button_build_it_bigger_text">Build It Bigger</string>
    <string name="button_xyz_reader_text">XYZ Reader</string>
    <string name="button_capstone_text">Capstone : My Idea</string>
    <string name="default_welcome_message">Welcome Friend :)</string>

</resources>
