<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="if_else.in.mynanodegreeprojects.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_header"
        android:layout_alignParentTop="true"
        android:textSize="25dp"
        android:textColor="#bf3219"
        android:textStyle="bold"
        android:paddingLeft="45dp"
        android:paddingTop="10dp"
        android:id="@+id/textView" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/button_spotify_streamer_text"
        android:id="@+id/button_spotify_streamer"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="#eb7d1e"
        android:onClick="showMessage"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/button_scores_app_text"
        android:id="@+id/button_scores_app"
        android:layout_below="@+id/button_spotify_streamer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#eb7d1e"
        android:onClick="showMessage"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/button_library_app_text"
        android:id="@+id/button_library_app"
        android:layout_below="@+id/button_scores_app"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#eb7d1e"
        android:onClick="showMessage"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/button_build_it_bigger_text"
        android:id="@+id/button_build_it_bigger"
        android:layout_below="@+id/button_scores_app"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#eb7d1e"
        android:onClick="showMessage"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/button_xyz_reader_text"
        android:id="@+id/button_xyz_reader"
        android:layout_below="@+id/button_build_it_bigger"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#eb7d1e"
        android:onClick="showMessage"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/button_capstone_text"
        android:id="@+id/button_capstone"
        android:layout_below="@+id/button_xyz_reader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#ca0e24"
        android:onClick="showMessage"/>

</RelativeLayout>
